force-app/main/default/objects/Case_Field_Mapping__mdt/Case_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Field mapping configuration between Standard Case and External ArchivedCase objects</description>
    <label>Case Field Mapping</label>
    <pluralLabel>Case Field Mappings</pluralLabel>
</CustomObject>