force-app/main/default/objects/Case_Field_Mapping__mdt/fields/External_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Field_API_Name__c</fullName>
    <description>API Name of the field in External ArchivedCase object</description>
    <label>External Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>