force-app/main/default/objects/Case_Field_Mapping__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Display label for the field in UI</description>
    <label>Field Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>