force-app/main/default/objects/Case_Field_Mapping__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Type of field for UI rendering (text, textarea, date, etc.)</description>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>textarea</fullName>
                <label>Textarea</label>
            </value>
            <value>
                <fullName>date</fullName>
                <label>Date</label>
            </value>
            <value>
                <fullName>datetime</fullName>
                <label>DateTime</label>
            </value>
            <value>
                <fullName>number</fullName>
                <label>Number</label>
            </value>
            <value>
                <fullName>email</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>phone</fullName>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>