force-app/main/default/objects/Case_Field_Mapping__mdt/fields/Standard_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Standard_Field_API_Name__c</fullName>
    <description>API Name of the field in Standard Case object</description>
    <label>Standard Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>